# managepro-be

./: .env  .gitignore  Makefile  appspec.yml  celerybeat-schedule.db  manage.py  project.txt  pyproject.toml
.github/workflows/: staging-deployment.yml
api/: urls.py
core/: notification.py  renderers.py  secrets.py
managepro/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: after_install.sh  application_start.sh
services/: constant.py  models.py  serializers.py  views.py
services/management/commands/: populate_services.py
services/migrations/: 0001_initial.py
subscription/: constants.py  models.py  serializer.py  tasks.py  views.py
subscription/management/commands/: populate_categories.py
subscription/migrations/: 0001_initial.py  0002_rename_categories_ids_subscription_category_ids.py  0003_alter_subscription_status.py  0004_remove_subscription_category_ids_and_more.py  0005_subscription_trial_billing_cycle.py
user/: models.py  serializers.py  tasks.py  utils.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_created_at_user_is_verified_user_updated_at_and_more.py  0004_code_is_used_code_used_at.py  0005_user_notify_days_before.py  0006_user_image_url_user_provider_user_provider_id.py  0007_alter_user_image_url_alter_user_password.py  0008_remove_user_provider_remove_user_provider_id.py  0009_userprovider.py  0010_rename_proivder_email_userprovider_provider_email.py  0011_remove_code_code_code_attempts_code_code_hash_and_more.py
